@@ -19,6 +19,7 @@ package com.netflix.curator.utils;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ThreadFactory;
 
 public class ThreadUtils
@@ -31,6 +32,16 @@ public class ThreadUtils
     public static ExecutorService newFixedThreadPool(int qty, String processName)
     {
         return Executors.newFixedThreadPool(qty, newThreadFactory(processName));
+    }
+
+    public static ScheduledExecutorService newSingleThreadScheduledExecutor(String processName)
+    {
+        return Executors.newSingleThreadScheduledExecutor(newThreadFactory(processName));
+    }
+
+    public static ScheduledExecutorService newFixedThreadScheduledPool(int qty, String processName)
+    {
+        return Executors.newScheduledThreadPool(qty, newThreadFactory(processName));
     }
 
     public static ThreadFactory newThreadFactory(String processName)
